--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 * {
     margin: 0px;
     padding: 0px;
+    @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&family=Ubuntu:wght@300;400;500;700&display=swap');
 }
 
 body {
@@ -85,22 +86,16 @@ body {
 
 .s-part {
     text-align: center;
-    font-family: 'Overpass Mono', monospace;
-    word-spacing: -3px;
-    letter-spacing: -2px;
+    font-family: 'Roboto', sans-serif;
     font-weight: normal;
+    font-size: 14px;
 }
 
 .s-part a {
+    font-family: 'Roboto', sans-serif;
     text-decoration: none;
     cursor: pointer;
     color: #3897f0;
-    font-family: 'Overpass Mono', monospace;
-    word-spacing: -3px;
-    letter-spacing: -2px;
     font-weight: normal;
 }
 
-/*input:focus {*/
-/*    background-color: yellow;*/
-/*}*/
